JIProlog Release Notes
------------------------------

4.1.6.1
    Fix arg/3 built-in predicate when the second argument is a list
    Added JIPList helper to get a Java List of terms
    Fix to manage text files without last separator
    Fix to marhallIn: now [] is marshalled as Java null and the atom 'void' is marshalled as Java Void class
    Fix to marshallOut function: Java int is now marshalled as integer and Java Void is now marshalled as the atom 'void'
    Fixed a bug in the encoding. Atoms with UTF-8 chars are now treated in the right way.
    Add support for \d and \e escape sequences
    Fix the integer power function, ^/2, for the latest ISO corrigenda

4.1.5.1
    Fixes and optimizations to the new xcall mechanism
    Using newInstance instead of clone for better perfomance
    Fix to getJIPTerm when the given object is null
    Fix atom_number/2 built-in predicate for mode atom_number(-, +)

4.1.4.1
    Fix to synchronous query when collecting variables

4.1.3.1
    Fix to XCall2 to speed up the JIPXCall instantiation

4.1.2.3
    Fix to GlobalDB for abolish/1, retract/1, retract_all/1 and clause/2 failed tests
    One more optimization on FAI
    Some more optimizations on first argument indexing and some
    tail-recursion optimizations

4.1.2.1
    Some improvements in first argument indexing
    Some more optimizations for first argument indexing

4.1.0.1
    Fix to proguard configuration
    Fix to current searchpath
    Removed System.exit at the end of JIProlog Standalone Interpreter
    Implemented first argument indexing
    Added Pack2 to pack one or more .pl files in one .jip compiled file
    Fix to expand_term/2 and translate/2 in wrapping naked vars
    Some optimization on asserting a clause in consult/load mode
    Add support for the discontiguous/1 predicate directive
    JIProlog, as other systems, can represent the character zero
    Removed some comments
    All io predicates optimized to avoid string comparison to check the